--- a/src/index.scss
+++ b/src/index.scss
@@ -61,5 +61,6 @@ strong{font-weight:bold;}
 em{font-style:italic;} 
 
 body {
+  background: #e0e0e0 !important;
   font-family: Roboto, Helvetica, Arial, sans-serif;
 }
