--- a/src/index.scss
+++ b/src/index.scss
@@ -64,3 +64,7 @@ body {
   background: #e0e0e0 !important;
   font-family: Roboto, Helvetica, Arial, sans-serif;
 }
+
+p, h1, h2, h3, h4, h5, h6{
+  margin: 0 !important
+}
