--- a/src/components/screens/Profile/Profile.module.scss
+++ b/src/components/screens/Profile/Profile.module.scss
@@ -3,6 +3,9 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+  @media(max-width: 768px){
+    padding: 10px;
+    }
 }
 .image{
   height: 100%;
@@ -27,5 +30,8 @@
   }
   table{
     width: 70%;
+    @media(max-width: 768px){
+    width: 100%;
+    }
   }
 }
