Правка стилей и доработка HeaderSearch

--- a/src/components/screens/Profile/Profile.module.scss
+++ b/src/components/screens/Profile/Profile.module.scss
@@ -18,6 +18,7 @@
   justify-content: center;
   align-items: center;
   tr{
+    border-bottom: 1px grey solid;
     display: flex;
     justify-content: space-between;
     padding: 20px;
@@ -28,10 +29,20 @@
       color: green
     }
   }
+  tr:last-of-type{
+    border: none
+  }
   table{
     width: 70%;
     @media(max-width: 768px){
     width: 100%;
     }
+  }
+}
+
+.profileInfo{
+  tr{
+    border-bottom: 1px grey solid;
+    padding: 20px
   }
 }
