--- a/src/components/ui/Tasks/Tasks.module.scss
+++ b/src/components/ui/Tasks/Tasks.module.scss
@@ -72,21 +72,22 @@ overflow: hidden;
   gap: 20px;
   @media(max-width: 767px){
     grid-template-columns: 1fr;
-    height: 139px;
+    height: 170px;
     gap: 0;
   }
+  margin-bottom: 10px;
 }
 
-.filterDatePicker{
-  text-align: left;
+.datePicker > *{
   width: 100%;
-  background-color: #ffffff;
-  border: 0;
-  border-radius: 4px;
+  height: 100%;
+}
+
+.datePicker{
+  padding: 0;
+  text-align: left;
   color: #000000;
-  cursor: pointer;
-  font: inherit;
-  padding: 5px 15px;
-  border: 1px solid rgb(171, 171, 171);
-  text-wrap: nowrap;
+  width: 100%;
+  height: 100%;
+  background: transparent
 }
