--- a/src/components/ui/Tasks/Tasks.module.scss
+++ b/src/components/ui/Tasks/Tasks.module.scss
@@ -1,4 +1,4 @@
-.taskItemImg{
+.taskItemImg {
   margin: auto 0;
   margin-right: 20px;
   overflow: hidden;
@@ -9,86 +9,152 @@
   border-radius: 10px;
   outline: 5px white solid;
   outline-offset: -4px;
-  img{
+
+  img {
+    transition: all 0.2s;
+
+    &:hover {
+      scale: 1.1
+    }
+
     height: 100%;
     object-fit: cover;
     max-width: 100%
   }
 }
-.taskItemName{
-}
-.taskList{
+
+.taskItemName {}
+
+.taskList {
   display: grid;
   gap: 10px;
-  @media(max-width: 767px){
+
+  @media(max-width: 767px) {
     grid-template-columns: 1fr !important
   }
 }
-.taskItem{
+
+.taskItem {
   padding: 10px;
   overflow: hidden;
   display: flex;
-  *{
+
+  * {
     width: 100%;
     color: black;
     min-width: 10px;
   }
-  p{
-    
+
+  p {
+
     text-overflow: ellipsis;
-white-space: nowrap;
-overflow: hidden;
+    white-space: nowrap;
+    overflow: hidden;
   }
 }
-.taskItemBottom{
-  @media(max-width: 767px){
+
+.taskItemBottom {
+  @media(max-width: 767px) {
     flex-direction: column;
   }
+
   display: flex;
   justify-content: space-between;
   gap: 10px;
 }
 
-.taskItemInfo{
+.taskItemInfo {
   height: 100%;
+
+  a>p:first-child {
+    transition: all .2s;
+
+    &:hover {
+      color: blue;
+    }
+  }
 }
 
-.status{
+.status {
   text-align: center;
   border-radius: 10px;
   color: white;
   min-width: 137px;
 }
 
-.taskItemProject{
-  background: rgb(182, 182, 182);padding: 0 5px;
+.taskItemProject {
+  background: rgb(182, 182, 182);
+  padding: 0 5px;
   border-radius: 10px;
+  transition: all .2s;
+
+  &:hover {
+    background: rgb(255, 255, 255);
+    outline: 1px solid blue;
+    padding: 0 5px;
+  }
 }
 
-.filter{
+.filter {
   width: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   height: 50px;
   gap: 20px;
-  @media(max-width: 767px){
+
+  @media(max-width: 767px) {
     grid-template-columns: 1fr;
     height: 170px;
     gap: 0;
   }
+
   margin-bottom: 10px;
 }
 
-.datePicker > *{
+.datePicker>* {
   width: 100%;
   height: 100%;
 }
 
-.datePicker{
+.datePicker {
   padding: 0;
   text-align: left;
   color: #000000;
   width: 100%;
   height: 100%;
   background: transparent
+}
+
+.pagination {
+  gap: 10px;
+  margin-top: auto;
+  display: flex;
+
+  * {
+    transition: all 0.2s;
+    width: 100%;
+  }
+
+  text-align: center;
+
+  button {
+    background: white;
+    border: 1px gray solid;
+    color: black;
+    border-radius: 10px;
+
+    &:hover {
+      background: gray;
+    }
+
+    &:disabled {
+      opacity: 0.2
+    }
+  }
+}
+
+.taskListWrapper {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
